fixing bugs based on FindBugs